<resources>
    <string name="app_name">上篮</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_tab_activity">首页</string>
    <string name="match_tab_activity">比赛</string>
    <string name="circle_tab_activity">圈子</string>
    <string name="data_tab_activity">数据</string>
    <string name="header_text">一个纯粹而有爱的篮球世界</string>
    <string name="header_btn">立即登录</string>
    <string name="header_notifi">我的通知</string>
    <string name="header_add">收藏/历史</string>
    <string name="header_message">系统消息</string>
    <string name="header_feedback">反馈</string>
    <string name="header_seek">搜索</string>
    <string name="header_set">设置</string>

    <string name="loading">加载中</string>
    <string name="net_work_error">网络请求发生错误</string>
    <string name="verify_second">秒后重新发送</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="modify_bind_phone">修改绑定手机</string>
    <string name="share_comment">分享这条评论</string>
    <string name="dont_found_url">未找到有效地址</string>
    <string name="camera">拍照</string>
    <string name="jump">跳过</string>
    <string name="cancel">取消</string>
    <string name="be_null">信息为空</string>
    <string name="nick_be_null">昵称或头像为空</string>
    <string name="confirm_to_use_default_name">确认使用默认用户名</string>
    <string name="photo">相册</string>
    <string name="log1">睚眦</string>
    <string name="log2">饕餮</string>
    <string name="log3">貔貅</string>
    <string name="net_disconnected">网络连接已断开</string>
    <string name="net_connected">已建立网络连接</string>
    <string name="this_is_a_fuck_null">这里他妈的有个空错</string>
    <string name="activity_set">WiFi环境下播放</string>
    <string name="only_one_season">只有当前赛季数据</string>
    <string name="logon_86"><![CDATA[+86>]]></string>
    <string name="logon_name">账号:不少于6位,包含字母与数字</string>
    <string name="logon_psw">密码:不少于6位,包含字母与数字</string>
    <string name="logon_yzm">验证码</string>
    <string name="logon_btn_dl">登录</string>
    <string name="logon_btn_zc">注册</string>
    <string name="logon_sjh">手机号</string>
    <string name="logon_dl_psw">密码</string>
    <string name="logon_dl_name">账号或者手机号</string>


</resources>
