<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnrollActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/tablayout"
        android:background="@color/app_theme_E45040"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40">

        <ImageView
            android:id="@+id/tba_img"
            android:src="@drawable/fanhuiyemian"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"/>


        <TextView
            android:text="注册"
            android:textColor="@color/homt_tab_ffffff"
            android:textSize="@dimen/dp_18"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <!--头像-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.jy.liuhairui.applayup.design.RoundImage
            android:layout_marginTop="@dimen/dp_50"
            android:id="@+id/img"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:src="@drawable/icon_reward_default_head" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/app_name" />

    </LinearLayout>

    <!--账号-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20">

        <EditText
            android:id="@+id/et_name"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logon_name" />

        <View
            android:layout_below="@id/et_name"
            android:background="@color/app_theme_E45040"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"/>
    </RelativeLayout>


    <!--密码-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20">

        <EditText
            android:id="@+id/et_psw"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logon_psw" />

        <View
            android:layout_below="@id/et_psw"
            android:background="@color/app_theme_E45040"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"/>
    </RelativeLayout>

    <!--手机号-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20">

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:text="@string/logon_86" />

        <EditText
            android:id="@+id/et_sjh"
            android:layout_toRightOf="@id/a"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logon_sjh" />

        <View
            android:layout_below="@id/et_sjh"
            android:background="@color/app_theme_E45040"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"/>
    </RelativeLayout>

    <!--验证码-->
    <RelativeLayout
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_yzm"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logon_yzm" />

        <TextView
            android:id="@+id/btn_yzm"
            android:textSize="@dimen/sp_16"
            android:text="@string/logon_yzm"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_below="@id/et_yzm"
            android:layout_marginTop="@dimen/dp_0_5"
            android:background="@color/app_theme_E45040"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_zc"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_gravity="center"
        android:text="@string/logon_btn_zc"
        android:layout_width="@dimen/dp_150"
        android:layout_height="wrap_content" />
</LinearLayout>