<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogonActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/tablayout"
        android:background="@color/app_theme_E45040"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40">

        <ImageView
            android:id="@+id/tba_img"
            android:src="@drawable/fanhuiyemian"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"/>


        <TextView
            android:text="登录"
            android:textColor="@color/homt_tab_ffffff"
            android:textSize="@dimen/dp_18"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <!--头像-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.jy.liuhairui.applayup.design.RoundImage
            android:layout_marginTop="@dimen/dp_50"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:src="@drawable/share_icon_little" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="@dimen/sp_16"
            android:text="@string/app_name" />

    </LinearLayout>


    <!--账号-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_margin="@dimen/dp_20">

        <EditText
            android:id="@+id/et_name"
            android:layout_toRightOf="@id/a"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logon_dl_name" />

        <View
            android:layout_below="@id/et_name"
            android:background="@color/app_theme_E45040"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"/>
    </RelativeLayout>

    <!--验证码-->
    <RelativeLayout
        android:layout_margin="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_psw"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logon_dl_psw" />


        <View
            android:layout_below="@id/et_psw"
            android:layout_marginTop="@dimen/dp_0_5"
            android:background="@color/app_theme_E45040"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/dp_50"
        android:layout_margin="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_zc"
            android:text="没有账号,注册"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_dl"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_centerHorizontal="true"
            android:text="@string/logon_btn_dl"
            android:layout_width="@dimen/dp_180"
            android:layout_height="wrap_content" />


    </RelativeLayout>


</LinearLayout>